# iv-q2-detect-kelp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  cv.py  cv2.py  cv3.py  delete_cache.sh  example_model_loop.py  playing around with dask and sklearn pipelines.ipynb  pyproject.toml  requirements.txt  run_dashboard.py  submit.py  sweep.py  testhydra.py  train.py  train.yaml
.gitlab/issue_templates/: bug_report.md  default.md  research.md
.gitlab/merge_request_templates/: default.md
conf/: cv.yaml  submit.yaml  train.yaml
conf/ensemble/: 15-02-1st.yaml  15-02-2nd.yaml  15-02-3rd.yaml  17-02-1st.yaml  17-02-2nd.yaml  19-02-1st.yaml  20-02-1st.yaml  20-02-2nd.yaml  20-02-3rd.yaml  21-02-1st.yaml  21-02-2nd.yaml  21-02-3rd.yaml  7dwarves-f18-clean-slate-part1.yaml  7dwarves-f18-clean-slate-part2.yaml  7dwarves-f18-clean-slate.yaml  dl_ensemble.yaml  dl_ensemble_hugo.yaml  fixed_sobol_2.yaml  horsemen.yaml  submission_ensemble.yaml  test_ensemble.yaml
conf/hydra/: logging.yaml
conf/model/: FUnet-v2.yaml  FUnet-v3.yaml  FUnet.yaml  README.md  TF.yaml  UNet-v2.yaml  Unet.yaml  auxiliary_compare.yaml  auxiliary_test.yaml  best.yaml  classification_test.yaml  conv2d.yaml  conv2d2.yaml  convNext.yaml  convNextf18-e100.yaml  convNextf18-lrdecay-1.yaml  convNextf18.yaml  cv_validate.yaml  dgx_sweep_base.yaml  emiel.yaml  feats.yaml  feature_map_test.yaml  hugo.yaml  hugo1.yaml  hugo1_aux.yaml  hugo2.yaml  hugo2_aux.yaml  lyu.yaml  lyu_res_swin.yaml  minimal.yaml  regression_test.yaml  res2net50-unet-bs16-f13-e100-fdb.yaml  res2net50-unet-bs16-f13-e75.yaml  res2net50-unet-bs16-f18-e100-fdb.yaml  res2net50-unet-bs16-f18-e100.yaml  res2net50-unet-bs16-f18-e75.yaml  resnet14d-unet-bs16-f13-e75.yaml  rn50-unetpp-bs8-f13-e75.yaml  swin-unetr-f13-fdb.yaml  swin-unetr-f18-fdb.yaml  (+36 more)
conf/model/horsemen/: horsemen1.yaml  horsemen2.yaml  horsemen3.yaml
conf/model/pipeline/: default.yaml
conf/model/triforce/: vgg11-manet-bs32-f10-e50.yaml  vgg11-unet-bs32-f13-e50.yaml  vgg13-unet-bs32-f10-e50.yaml
conf/models/: unet2M.yaml
conf/models/pipeline/: default.yaml
conf/sweep/: default_sweep.yaml  gaussian_blur.yaml  loss_sweep.yaml  model_sweep_example.yaml  multi_model_sweep_example.yaml  unet_sweep.yaml  unet_sweep_big.yaml  unet_sweep_small.yaml
conf/wandb/: train.yaml
dashboard/: __init__.py  consumption.py  dashboard.py  layouts.py  production.py  utils.py
dashboard/layouts/: __init__.py  default.py  features.py  predictions.py
dashboard/utils/: colors.py
data/: README.md
data/processed/: README.md
data/raw/: README.md
data/test/: README.md
data/training/: README.md
docs/: conf.py  index.rst
logging/: README.md
logging/logs/: README.md
notebooks/: README.md  analyze_preds.ipynb  catboost-opt.ipynb  catboost_features.txt  catboost_model.cbm  create-metadataset.ipynb  datatype.ipynb  dilate_small_blobs_in_pred.ipynb  dithertest.ipynb  ensemble-selection-corr-test.ipynb  ensemble-selection-test.ipynb  ensemble-selection.ipynb  ensemble_weights.db  feat-suite.ipynb  mask_classifier.ipynb  xgboost_model.pkl
notebooks/submission/: DiceLoss.py  blocks.py  dataset.py  eda-submission-unet.ipynb  metrics.py  model.py  unet.py  utils.py
notebooks/submission/models/: logs.csv  logs1.csv
plots/images/leakage/: leakage.txt
runs/model_visualization/: events.out.tfevents.1707145871.TolgaPC.25724.0
scripts/: fix_wandb_configs.py  move_to_raw.py  move_to_temp.py  wandb_autoname_configs.py
src/: README.md  __init__.py  test_sphinx.py
src/augmentations/: __init__.py  augmentation.py  mosaic.py  transformations.py
src/config/: __init__.py  cross_validation_config.py  submit_config.py  train_config.py  wandb_config.py
src/config_factories/: README.md
src/cv_splitter/: __init__.py  binary_segmentation_stratified_k_fold.py  binary_target_stratified_k_fold.py  kelp_forest_segmentation_stratified_k_fold.py
src/ensemble_pipeline/ensemble_processing_pipeline/: README.md
src/logging_utils/: __init__.py  logged_error.py  logger.py  section_separator.py
src/model_pipeline/model_loop/: README.md
src/model_pipeline/post_processing_pipeline/: README.md
src/model_pipeline/target_processing_pipeline/: README.md
src/modules/: __init__.py  dice_loss.py  model_head.py
src/modules/loss/: __init__.py  auxiliary_loss.py  auxiliary_loss_double.py  combo_loss.py  dice_bce_loss.py  dice_loss.py  focal_dice_2boundary_loss.py  focal_dice_5boundary_loss.py  focal_dice_boundary_loss.py  focal_loss.py  focal_tversky_loss.py  jaccard_loss.py  lovasz_hinge_loss.py  shrinkage_loss.py  tversky_loss.py  utils.py  weighted_bce_loss.py
src/modules/models/: __init__.py  conv_next.py  conv_next2.py  custom_data_parallel.py  custom_timm.py
src/modules/models/swin/: __init__.py  cyclic_shift.py  feed_forward.py  patch_merging.py  pre_norm.py  res_swin_v2.py  residual.py  stage_module.py  swin_block.py  utils.py  window_attention.py
src/pipeline/: __init__.py
src/pipeline/caching/: __init__.py  column.py  error.py  tif.py
src/pipeline/caching/util/: __init__.py  error.py  store_raw.py
src/pipeline/ensemble/: __init__.py  dl_ensemble.py  ensemble.py  ensemble_base.py  error.py  logical_ensemble.py  weighted_ensemble.py
src/pipeline/ensemble/ensemble_processing_pipeline/: README.md
src/pipeline/model/: __init__.py  model.py
src/pipeline/model/architectures/: 224_model.py  (+9 more)
src/pipeline/parse/: error.py  tif.py
src/pipeline/store/: error.py  tif.py
src/scoring/: __init__.py  dice_coefficient.py  scorer.py
src/utils/: extract_patches.py  flatten_dict.py  hashing.py  make_submission.py  reconstruct_from_patches.py  replace_list_with_dict.py  seed_everything.py  seed_torch.py  setup.py
src/utils/script/: __init__.py  generate_params.py  hash_check.py  lock.py  reset_wandb_env.py
tests/: README.md  test_reconstruction.py  test_shore.py
tests/augmentations/: mosaic_test.py  test_mosaic.py  test_transformations.py
tests/cv_splitter/: binary_segmentation_stratified_k_fold.py
tracking/: README.md
tracking/logs/: README.md
(+72 files in other folders)
